# structured-text

./: ChangeLog.md  README.md  package.yaml  stack.yaml  structured-text.cabal
app/: Main.hs  Shell.hs
demo/: thresh.py  thresh.st
ex/: misc_ltl.st  thresh_ltl.st
examples/: qc.hs
paper/: Makefile  refs.bib  stub.tex  stxt.tex
python/: aba.py
samples/: case1.st  counter.st  f.6.13.st  f19.st  f22.st  hc-t-187.st  hc-t-189.st  simple.st  sumc.st  t17-3.st  t18-1.st  t18-10.st  t20-3a.st  t33-11.st  t33-6a.st  t33-7a.st  t33-8a.st  t36-1a.st  t36-2a.st  t36-3a.st  t56-1.st  t56-6.st  threshold.st
samples/unsupported/: .t33-8a.st.swp
samples/unsupported/invalid_decl_type/: f.11.st  f10.st
src/StructuredText/: ABA.hs  Automata.hs  Boolean.hs  Buchi.hs  DFA.hs  Eval.hs  LTL.hs  Parser.hs  Syntax.hs  Testing.hs  ToABA.hs  ToBuchi.hs  ToPython.hs  ToSTxt.hs
test/: Spec.hs
