cabal-version: 1.12

name:           structured-text
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/chathhorn/structured-text#readme>
homepage:       https://github.com/chathhorn/structured-text#readme
bug-reports:    https://github.com/chathhorn/structured-text/issues
author:         Chris Hathhorn
maintainer:     hathhorn@gmail.com
copyright:      2020 Chris Hathhorn
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/chathhorn/structured-text

library
  exposed-modules:
      StructuredText.Parser
    , StructuredText.Syntax
  other-modules:
      Paths_structured_text
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , attoparsec >= 0.13.2 && < 0.13.3
    , text >= 1.2.4 && < 1.2.5
    , prettyprinter >= 1.7 && < 1.8
  default-language: Haskell2010

executable structured-text-parser
  main-is: Main.hs
  other-modules:
      Paths_structured_text
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , structured-text
    , text >= 1.2.4 && < 1.2.5
    , prettyprinter >= 1.7 && < 1.8
  default-language: Haskell2010

test-suite structured-text-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_structured_text
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , structured-text
  default-language: Haskell2010
